# python-template

./: .gitignore  .mypy.ini  LICENSE  README.md  README.rst  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: linting.yml  testing.yml
docs/source/: conf.py  index.rst  package.bin.rst  package.rst  package.sub_package.rst
my_package/: __main__.py
my_package/sub_package/: sub_module.py
package/: __main__.py  module.py
tests/: test_example.py
